# python-project-83

./: .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: flake8.yml
page_analyzer/: __init__.py  app.py  db_manager.py  env_manager.py  utils.py
page_analyzer/scripts/: build.sh
page_analyzer/templates/: base.html  index.html  url_id.html  urls.html
page_analyzer/templates/includes/: footer.html  head.html  navbar.html
